2008-11-04  Atsushi Enomoto  <atsushi@ximian.com>

	* src/gutf8.c, src/gunicode.c, src/glib.h:
	  implemented g_unichar_type(), g_unichar_toupper(),
	  g_unichar_tolower(), g_unichar_totitle(), g_utf8_strup()
	  and g_utf8_strdown(). Fixed some surrogate pair bugs.
	* TODO : removed implemented things.
	* test/unicode.c, test/tests.h, test/utf8.c, test/Makefile.am:
	  added new tests.

2008-11-04  Atsushi Enomoto  <atsushi@ximian.com>

	* src/unicode-data.h : new header for some new unicode manipulation
	  functions.

2008-10-17  Miguel de Icaza  <miguel@novell.com>

	* Allow types to be defined on the eglib-config.h file, that could
	be a platform specific generated type file.

	* gtimer.c: split functionality in platforms.

2008-10-13  Bill Holmes  <billholmes54@gmail.com>

	* src/gdate-win32.c : Fix compiler errors for MSVC.

	* src/gpath.c : Fix compiler errors for MSVC.

	* src/gfile-posix.c : Adding declaration for mkstemp for the win 32
	  implementation in gfile-win32.c.

	Contributed under MIT/X11 license.

2008-10-11  Miguel de Icaza  <miguel@novell.com>

	* gtimer.c: Same process.

	* src/glib.h: Move g_strdup here, to consolidate all allocations
	in this header, will help for merging the allocation work later. 

	* src/gpattern.c (compile_pattern): From Unity, use -1 in the enum
	for MatchType.

	* src/gpath.c: Split this one as well.

	* src/gmodule-win32.c, src/gmisc-unix.c, src/gmisc-win32.c,
	src/gmodule-unix.c: split functionality in platforms.
	
	* src/goutput.c (g_logv): On some platforms, before we abort we
	want to flush the stdout/stderr.

2008-10-10  Miguel de Icaza  <miguel@novell.com>

	* Split functionality that is operating system specific into
	-win32.c, -unix.c and -posix.c 

	* Use g_malloc everywhere, and g_free, so that these can be easily
	overwritten consistently.

2008-09-16  Bill Holmes  <billholmes54@gmail.com>

	* src/gunicode.c : Fix a warning.

	Contributed under MIT/X11 license.
